fix border color in dark mode

--- a/frontend/src/main.less
+++ b/frontend/src/main.less
@@ -1,4 +1,4 @@
-a {
+a, #switch-theme-icon {
     cursor: pointer;
 }
 
@@ -92,6 +92,8 @@ a {
     .d-flex {
         background-color: var(--background-color-primary);
         color: var(--text-primary-color);
+        border-color: var(--text-primary-color); 
+
     }
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -124,5 +126,9 @@ a {
 
     .seperator b {
         background-color: var(--background-color-primary);
+    }
+
+    .dropdown-menu {
+        border-color: var(--text-primary-color); 
     }
 }
